# parlance

./: .gitignore  Cargo.toml  README.md  parlance.toml
src/: lib.rs  main.rs
src/app/: command.rs  mod.rs  output.rs
src/core/: config.rs  error.rs  mod.rs  peer.rs  validation.rs
src/network/: discovery.rs  messaging.rs  mod.rs
tests/: command_tests.rs  discovery_tests.rs  error_tests.rs  messaging_tests.rs  peer_tests.rs  validation_tests.rs
tests/common/: mod.rs
