[package]
name = "parlance"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parlance"
path = "src/main.rs"

[lib]
name = "parlance"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = "0.4"
crossterm = "0.27"
socket2 = "0.5"
clap = { version = "4", features = ["derive"] }
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
